--- a/BethanysPieShop/Views/Shared/PieOverviewSummary.cshtml
+++ b/BethanysPieShop/Views/Shared/PieOverviewSummary.cshtml
@@ -8,9 +8,21 @@
                 @Model.Price.ToString("c")
             </h3>
             <h3>
-                <a>@Model.Name</a>
+                <a asp-controller="Pie"
+                   asp-action="Details"
+                   asp-route-id="@Model.Id">@Model.Name</a>
             </h3>
             <p>@Model.ShortDescription</p>
+        </div>
+        <div class="addToCart">
+            <p class="button">
+                <a class="btn btn-primary"
+                   asp-controller="ShoppingCart"
+                   asp-action="AddToShoppingCart"
+                   asp-route-pieId="@Model.Id">
+                    Add to cart
+                </a>
+            </p>
         </div>
     </div>
 </div>
