--- a/BethanysPieShop/Views/ShoppingCart/Index.cshtml
+++ b/BethanysPieShop/Views/ShoppingCart/Index.cshtml
@@ -33,3 +33,10 @@
         </tr>
     </tfoot>
 </table>
+
+<div class="text-center">
+    <a class="btn btn-primary" asp-controller="Order"
+       asp-action="Checkout" >
+        Checkout now!
+    </a>
+</div>
