Trabajando en el administrador de Identity Core

--- a/BethanysPieShop/Views/_ViewImports.cshtml
+++ b/BethanysPieShop/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BethanysPieShop.Models
 @using BethanysPieShop.ViewModels
+@using  Microsoft.AspNetCore.Identity
 @addTagHelper BethanysPieShop.TagHelpers.*, BethanysPieShop
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
