Trabajando con el administrador de usuarios

--- a/BethanysPieShop/Views/Admin/AddUser.cshtml
+++ b/BethanysPieShop/Views/Admin/AddUser.cshtml
@@ -32,6 +32,30 @@
     </div>
 
     <div class="form-group">
+        <label asp-for="Birthdate" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Birthdate" class="form-control" />
+            <span asp-validation-for="Birthdate" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="City" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="City" class="form-control" />
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Country" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Country" class="form-control" />
+            <span asp-validation-for="Country" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-primary" value="Create user" />
         </div>
