--- a/BethanysPieShop/Views/_ViewImports.cshtml
+++ b/BethanysPieShop/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BethanysPieShop.Models
 @using BethanysPieShop.ViewModels
+@using BethanysPieShop.Auth
 @using  Microsoft.AspNetCore.Identity
 @addTagHelper BethanysPieShop.TagHelpers.*, BethanysPieShop
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
